--- a/flightAggregator_domestic.ipynb
+++ b/flightAggregator_domestic.ipynb
@@ -18,10 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d28c48bf",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -34,12 +34,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14abb9fa7a844447afd77e6e6f431255",
+       "model_id": "2892e0b7c67443d285ec1fe444d661c3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntProgress(value=0)"
+       "Processing:   0%|          | 0/7280 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -51,7 +51,7 @@
      "text": [
       "\n",
       "\n",
-      " 697 / 7280  entries unfinished\n",
+      " 687 / 7280  entries unfinished\n",
       "\n",
       "\n",
       "Trial  1\n"
@@ -60,16 +60,53 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3b008a0b0b046a5a8d6ecefc913a5ce",
+       "model_id": "c15607b8c8be4e2eb7d50e40969faab6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntProgress(value=0)"
+       "Processing:   0%|          | 0/7280 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 687 / 7280  entries unfinished\n",
+      "\n",
+      "\n",
+      "Trial  2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b48bb7d8187b47c890490ae4988fa111",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing:   0%|          | 0/7280 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 687 / 7280  entries unfinished\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -100,7 +137,7 @@
     "        pickle.dump(itin_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "for i in range(max_tries):\n",
-    "    print(\"Trial \",i)\n",
+    "    print(\"Sweep \",(i+1))\n",
     "    num_unfinished = helper.update_dict(itin_dict, folder_path, date_today_file, mode)\n",
     "    total_keys = len(itin_dict.keys())\n",
     "    print(\"\\n\\n\",num_unfinished,\"/\",total_keys, \" entries unfinished\\n\\n\")\n",
