--- a/flightAggregator_intl.ipynb
+++ b/flightAggregator_intl.ipynb
@@ -125,7 +125,7 @@
     "        pickle.dump(itin_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
     "for i in range(max_tries):\n",
-    "    print(\"Trial \",i)\n",
+    "    print(\"Sweep \",(i+1))\n",
     "    num_unfinished = helper.update_dict(itin_dict, folder_path, date_today_file, mode)\n",
     "    total_keys = len(itin_dict.keys())\n",
     "    print(\"\\n\\n\",num_unfinished,\"/\",total_keys, \" entries unfinished\\n\\n\")\n",
