added sqlite3 functionality

--- a/flightAggregator_intl.ipynb
+++ b/flightAggregator_intl.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "e3f05391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": null,
+   "id": "2a37eec9",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -32,82 +32,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8aef1a2858446df93d41f945ec957de",
+       "model_id": "d9ac075c56444f4bbdbb82584fee9b3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=4500.0), HTML(value='')))"
+       "Processing:   0%|          | 0/4500 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      " 692 / 4500  entries unfinished\n",
-      "\n",
-      "\n",
-      "Sweep  2\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a10d4f7f4e7c4218a6e53d448e091a49",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=4500.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      " 616 / 4500  entries unfinished\n",
-      "\n",
-      "\n",
-      "Sweep  3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3156a58f411d4600b4be995795de202f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=4500.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      " 616 / 4500  entries unfinished\n",
-      "\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -125,6 +59,7 @@
     "num_days = 365\n",
     "mode = \"intl\"\n",
     "folder_path = 'logs/'\n",
+    "DB_filename = 'dataDB'\n",
     "max_tries = 3\n",
     "date_today_file = datetime.datetime.today().strftime('%Y-%m-%d') + '_intl.pkl'\n",
     "if os.path.isfile(folder_path+date_today_file):\n",
@@ -143,13 +78,19 @@
     "    print(\"\\n\\n\",num_unfinished,\"/\",total_keys, \" entries unfinished\\n\\n\")\n",
     "    if num_unfinished==0:\n",
     "        print(\"\\n\\nAll entries filled. Exiting\\n\\n\")\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "#WARNING: Run this line only to make DB from scratch using all the files already in the logs\n",
+    "# helper.createDBFromDictFiles(DB_filename, mode, folder_path)\n",
+    "\n",
+    "#Add the itin_dict into the database\n",
+    "addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
