--- a/flightAggregator_domestic.ipynb
+++ b/flightAggregator_domestic.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "37c8924d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,96 +19,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "05f0036f",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sweep  1\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6fb25545e184824bbc53e23483d0192",
+       "model_id": "b9d8ecc63f3044aaac065a1503ff6a57",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=7280.0), HTML(value='')))"
+       "Processing Files:   0%|          | 0/4 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      " 688 / 7280  entries unfinished\n",
-      "\n",
-      "\n",
-      "Sweep  2\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b76d6d6cbb64ddb94f449d7e7e29ac3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=7280.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      " 687 / 7280  entries unfinished\n",
-      "\n",
-      "\n",
-      "Sweep  3\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f9db5d9c5f2480d8f3d9afdde8b592b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=7280.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      " 687 / 7280  entries unfinished\n",
-      "\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -126,6 +53,7 @@
     "mode = \"domestic\"\n",
     "num_days = 365\n",
     "folder_path = 'logs/'\n",
+    "DB_filename = 'dataDB'\n",
     "max_tries = 3\n",
     "date_today_file = datetime.datetime.today().strftime('%Y-%m-%d') + '.pkl'\n",
     "if os.path.isfile(folder_path+date_today_file):\n",
@@ -144,13 +72,19 @@
     "    print(\"\\n\\n\",num_unfinished,\"/\",total_keys, \" entries unfinished\\n\\n\")\n",
     "    if num_unfinished==0:\n",
     "        print(\"\\n\\nAll entries filled. Exiting\\n\\n\")\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "#WARNING: Run this line only to make DB from scratch using all the files already in the logs\n",
+    "# helper.createDBFromDictFiles(DB_filename, mode, folder_path)\n",
+    "\n",
+    "#Add the itin_dict into the database\n",
+    "addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
