--- a/flightAggregator_intl.ipynb
+++ b/flightAggregator_intl.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2a37eec9",
    "metadata": {},
    "outputs": [
@@ -42,6 +42,80 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 686 / 4500  entries unfinished\n",
+      "\n",
+      "\n",
+      "Sweep  2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c67537b00a5846d1a1f319b00d259a8b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing:   0%|          | 0/4500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 605 / 4500  entries unfinished\n",
+      "\n",
+      "\n",
+      "Sweep  3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7eef165c0c54a0da6dfd3457ef91786",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing:   0%|          | 0/4500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 605 / 4500  entries unfinished\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'addDictToDBFromFile' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 40\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m#WARNING: Run this line only to make DB from scratch using all the files already in the logs\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# helper.createDBFromDictFiles(DB_filename, mode, folder_path)\u001b[39;00m\n\u001b[1;32m     38\u001b[0m \n\u001b[1;32m     39\u001b[0m \u001b[38;5;66;03m#Add the itin_dict into the database\u001b[39;00m\n\u001b[0;32m---> 40\u001b[0m addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'addDictToDBFromFile' is not defined"
+     ]
     }
    ],
    "source": [
@@ -84,7 +158,7 @@
     "# helper.createDBFromDictFiles(DB_filename, mode, folder_path)\n",
     "\n",
     "#Add the itin_dict into the database\n",
-    "addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)"
+    "helper.addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)"
    ]
   }
  ],
