--- a/flightAggregator_domestic.ipynb
+++ b/flightAggregator_domestic.ipynb
@@ -18,19 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "05f0036f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sweep  1\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9d8ecc63f3044aaac065a1503ff6a57",
+       "model_id": "5e43e6d1bdde43ffa8fe348b41ec6334",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing Files:   0%|          | 0/4 [00:00<?, ?it/s]"
+       "Processing:   0%|          | 0/7280 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -78,7 +85,7 @@
     "# helper.createDBFromDictFiles(DB_filename, mode, folder_path)\n",
     "\n",
     "#Add the itin_dict into the database\n",
-    "addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)"
+    "helper.addDictToDBFromFile(DB_filename, mode, folder_path, itin_dict)"
    ]
   }
  ],
