--- a/flightAggregator_domestic.ipynb
+++ b/flightAggregator_domestic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "05f0036f",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e43e6d1bdde43ffa8fe348b41ec6334",
+       "model_id": "52e2c2b8bdd240c48afe39301a7368e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,6 +42,69 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 919 / 7280  entries unfinished\n",
+      "\n",
+      "\n",
+      "Sweep  2\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f92997822ee246c190fbe3b59f124dc7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing:   0%|          | 0/7280 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 919 / 7280  entries unfinished\n",
+      "\n",
+      "\n",
+      "Sweep  3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "502f5b785c6c4948b4cee68cc374bc19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing:   0%|          | 0/7280 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " 919 / 7280  entries unfinished\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
